Fix broken css on about page

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@
 
 	/* About Page */
 		#about img {
-			margin: 20px
+			margin: 20px;
 			border-radius: 10px;
 		}
 
